prusti-tests/tests/verify/fail/native/trivial.rs
// compile-flags: -Pviper_backend=Lithium

fn main() {
    assert!(false); //~ ERROR might not hold
}
